# YakChessCpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  README.md  attackmaps.cpp  attackmaps.h  bitboard.cpp  bitboard.h  board.cpp  board.h  magic.h  main.cpp  move.h  movegen.cpp  movegen.h  pieces.cpp  pieces.h
benchmarking/: CMakeLists.txt  benchmark_tests.cpp  benchmarking.h
cmake/: Doxygen.cmake
src/: CMakeLists.txt  GameState.cpp  GameState.h  MagicBitboards.h  attackmaps.cpp  attackmaps.h  bitboard.cpp  bitboard.h  board.cpp  board.h  generation.h  magic.h  move.h  move.hpp  pawns.h  pieces.cpp  pieces.h  types.cpp  types.h  xray.hpp
src/benchmarking/: CMakeLists.txt  benchmark_tests.cpp  benchmark_tests.h  timer.cpp
src/engine/: AlphaBeta.cpp  AlphaBeta.h  CMakeLists.txt
src/engine/tests/: AlphaBetaTests.cpp  CMakeLists.txt
src/magic/: AttackMaps.hpp  CMakeLists.txt  MagicBitboards.hpp  MagicCommon.h  MagicGenerator.cpp  MagicNumberGeneration.h
src/magic/tests/: AttackMapTests.cpp  CMakeLists.txt  MagicTests.cpp
src/perft/: CMakeLists.txt  Perft.cpp  Perft.h  PerftExt.cpp  PerftTests.cpp
src/test/: CMakeLists.txt  GameStateTests.cpp  MagicBitboardTests.cpp  TypesTests.cpp  XRayTests.cpp  attackmaps_test.cpp  bitboard_test.cpp  board_test.cpp  pieces_test.cpp
test/: CMakeLists.txt  attackmaps_test.cpp  bitboard_test.cpp  board_test.cpp  movegen_test.cpp  pieces_test.cpp
